kustomize/mautic/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mautic-deployment
  labels:
    app: mautic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mautic
  template:
    metadata:
      labels:
        app: mautic
    spec:
      containers:
        - name: mautic
          image: mautic/mautic:v4
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 2000Mi
              cpu: 1000m
            limits:
              memory: 2000Mi
              cpu: 1000m
