kustomize/mautic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mautic
spec:
  selector:
    app: mautic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
