kustomize/mautic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mautic
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - hosts:
        - mautic.lb.djnd.si
      secretName: mautic-tls
  rules:
    - host: mautic.lb.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mautic
                port:
                  number: 80
